# PerCV

./: .gitignore  MANIFEST.md  README.md  context.md  docker-compose.yml
.github/workflows/: ci.yml
artifacts/: baseline_metrics.json
artifacts/plots/: .gitkeep
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: classify.py  dashboard.py  lanes.py  matching.py  panorama.py
backend/app/core/: __init__.py  models_state.py
backend/app/models/: __init__.py
backend/app/services/: __init__.py  classify_service.py  lanes_service.py  matching_service.py  panorama_service.py
backend/tests/: test_cnn.py  test_lanes.py  test_matching.py  test_panorama.py  test_routes.py
docs/images/: .gitkeep
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Common.tsx
frontend/src/pages/: Classification.tsx  FeatureMatching.tsx  LaneDetection.tsx  Overview.tsx  Panorama.tsx
notebooks/: README.md  percv_kaggle.ipynb
outputs/lanes/: quality_scores.csv  summary.json
outputs/matching/: ratio_sweep.csv  summary.json
outputs/panorama/: pair_metrics.json
percv_cv/: __init__.py  cnn.py  config.py  gradcam.py  lanes.py  matching.py  panorama.py
report/: critical_analysis.md
scratch/: generate_dummy_data.py  generate_dummy_intel.py  generate_dummy_pano.py  generate_dummy_sift.py  inspect_ckpt.py  patch_notebook.py
scripts/: run_all.py  run_classify.py  run_lanes.py  run_matching.py  run_panorama.py
(+1 files in other folders)
