[project]
name = "percv-backend"
version = "0.1.0"
description = "PerCV — Computer Vision Pipeline API Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
